--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
     "builds": [{"src": "app.py", "use": "@vercel/python"}],
-    "routes": [{"source": "/{.*}", "destination": "./app"}]
+    "routes": [{"src": "/{.*}", "destination": "./app"}]
 
 }
