--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
-
 {
-    "builds": [{"src": "app.py", "use": "@vercel/python"}],
-    "routes": [{"src": "/{.*}", "dest": "./"}]
-
+  "rewrites": [{ "source": "/(.*)", "destination": "/app.py" }]
 }
