--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/templates/index.html" }],
+  "rewrites": [{ "source": "/(.*)", "destination": "/templates/index" }],
   "builds": [ {"src": "./app.py", "use": "@vercel/python"} ]
 }
