--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,3 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/templates/index" }],
-  "builds": [ {"src": "./app.py", "use": "@vercel/python"} ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/templates/index" }]
 }
