--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/app/app"}]
+  "rewrites": [{ "source": "/(.*)", "destination": "/app/app.py"}]
 }
