--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,9 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/app/app.py"}]
+  "version": 2,
+  "builds": [
+    { "src": "/app.app.py", "use": "@vercel/python" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/app/app.py" }
+  ]
 }
