--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,15 @@
   "builds": [
     {
       "src": "app/app.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "maxDuration": 30
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "app/app.py"
+      "dest": "app/app.py",
+      "maxDuration": 30
     }
   ]
 }
